changes on RBAC, added service account and operator namespace to CRD/goremote spec

--- a/config/samples/go-remote_v1alpha1_goremote.yaml
+++ b/config/samples/go-remote_v1alpha1_goremote.yaml
@@ -30,3 +30,6 @@ spec:
         type: Socket
     - name: gitrepo 
       emptyDir: {}
+  
+  serviceAccount: "pod-network-operator-sa"
+  operatorNamespace: "pod-network-operator"
