--- a/manifests/service_account.yaml
+++ b/manifests/service_account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: podconfig-operator-sa
-  namespace: cnf-test
+  name: pod-network-operator-sa
+  namespace: pod-network-operator
