fixed and tested RBAC permissions on go-remote-operator and go-remote operand

--- a/config/crd/bases/go-remote.opdev.io_goremotes.yaml
+++ b/config/crd/bases/go-remote.opdev.io_goremotes.yaml
@@ -1325,7 +1325,7 @@ spec:
               goRemoteImage:
                 description: GoRemoteImage is the base image to run the environment
                 type: string
-              operatorNamespace:
+              goRemoteNamespace:
                 type: string
               serviceAccount:
                 type: string
