--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
+  name: go-remote-manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-role
+  name: go-remote-manager-role
 subjects:
 - kind: ServiceAccount
-  name: default
-  namespace: system
+  name: go-remote-operator-sa
+  namespace: go-remote-operator
