--- a/config/crd/patches/cainjection_in_goremotes.yaml
+++ b/config/crd/patches/cainjection_in_goremotes.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: goremotes.go-remote.opdev.io
+  name: goremotes.go-remote.fennecproject.io
