--- a/config/crd/patches/webhook_in_goremotes.yaml
+++ b/config/crd/patches/webhook_in_goremotes.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: goremotes.go-remote.opdev.io
+  name: goremotes.go-remote.fennecproject.io
 spec:
   conversion:
     strategy: Webhook
