--- a/config/rbac/goremote_editor_role.yaml
+++ b/config/rbac/goremote_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: goremote-editor-role
 rules:
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes/status
   verbs:
