--- a/config/rbac/goremote_viewer_role.yaml
+++ b/config/rbac/goremote_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: goremote-viewer-role
 rules:
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes/status
   verbs:
