--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -13,7 +13,7 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes
   verbs:
@@ -25,7 +25,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - go-remote.opdev.io
+  - go-remote.fennecproject.io
   resources:
   - goremotes/status
   verbs:
