--- a/config/rbac_application/role.yaml
+++ b/config/rbac_application/role.yaml
@@ -13,7 +13,7 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - bridges
   verbs:
@@ -25,13 +25,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - bridges/finalizers
   verbs:
   - update
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - bridges/status
   verbs:
@@ -39,7 +39,7 @@ rules:
   - patch
   - update
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - podnetworkconfigs
   verbs:
@@ -51,13 +51,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - podnetworkconfigs/finalizers
   verbs:
   - update
 - apiGroups:
-  - podnetwork.opdev.io
+  - podnetwork.fennecproject.io
   resources:
   - podnetworkconfigs/status
   verbs:
