--- a/config/rbac_pod_network_operator/role_binding.yaml
+++ b/config/rbac_pod_network_operator/role_binding.yaml
@@ -15,6 +15,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: manager-rolebinding
+  namespace: pod-network-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
