--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -15,7 +15,8 @@
 bases:
 - ../crd
 - ../rbac
-- ../rbac_application
+- ../rbac_pod_network_operator
+- ../rbac_snoopy_operator
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
