--- a/config/samples/pod-network-operator-goremote.yaml
+++ b/config/samples/pod-network-operator-goremote.yaml
@@ -6,7 +6,7 @@ metadata:
   
 spec:
   # Add fields here
-  goRemoteImage: quay.io/acmenezes/go-remote:centos8
+  goRemoteImage: quay.io/fennec-project/go-remote:centos8
   gitRepo: https://github.com/fennec-project/pod-network-operator.git
   containerPorts:
     - containerPort: 2222
