Add NodeSelector to CR
Added a NodeSelector field to CR. Regenerated the deep copy and
CRD files using both make manifests and make generate.

Added NodeSelector to the Pod Spec under the Deployment template
on newDeploymentForGoRemote.

Also changed the samples podtracer.yaml file to use the nodeSelector
field and land on the test node.

--- a/config/crd/bases/go-remote.fennecproject.io_goremotes.yaml
+++ b/config/crd/bases/go-remote.fennecproject.io_goremotes.yaml
@@ -1327,6 +1327,11 @@ spec:
                 type: string
               goRemoteNamespace:
                 type: string
+              nodeSelector:
+                additionalProperties:
+                  type: string
+                description: Node selector for development nodes
+                type: object
               serviceAccount:
                 type: string
               servicePorts:
