Issue #8 - FIX listing operation
Switched list by using get instead. List operations will act on
unexpected CRs if not filtered. Get is simpler and easier.

Added NodeSelector on the remaining samples.

--- a/config/samples/pod-network-operator-goremote.yaml
+++ b/config/samples/pod-network-operator-goremote.yaml
@@ -10,7 +10,8 @@ spec:
   gitRepo: https://github.com/fennec-project/pod-network-operator.git
   containerPorts:
     - containerPort: 2222
-
+  nodeSelector:
+    cnf-telco: "true"
   VolumeMounts:
     - mountPath: /tmp/proc
       name: proc
